<resources>
    <string name="app_name">My Application</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="_1_111_467_378_399">+1 111 467 378 399</string>
    <string name="andrew_ainsley">Andrew Ainsley</string>
    <string name="address">Address</string>
    <string name="notification">Notification</string>
    <string name="payment">Payment</string>
    <string name="security">Security</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_center">Help Center</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="logout">Logout</string>
</resources>