<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svProfileSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProfileSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:background="@color/white"
        android:padding="15dp">


        <TextView
            android:id="@+id/tvMainProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="133dp"
            android:drawablePadding="3dp"
            android:text="@string/profile"
            android:textSize="24sp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_main_icon"
            app:layout_constraintBottom_toTopOf="@+id/tvFullName"
            app:layout_constraintEnd_toStartOf="@+id/ivProfilePicture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnThreeDots"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="216dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_threedots"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.357"
            app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivProfilePicture"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="11dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:layout_constraintBottom_toTopOf="@+id/tvFullName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnChangePicture"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="140dp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_pencil"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="onProfilePictureChangeClicked"/>

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:layout_marginBottom="6dp"
            android:text="@string/andrew_ainsley"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvPhoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="232dp"
            android:layout_marginBottom="25dp"
            android:text="@string/_1_111_467_378_399"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="276dp"
            android:layout_marginBottom="27dp"
            android:background="@color/shadyGrey"
            app:layout_constraintBottom_toTopOf="@+id/tvEditProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView

            android:id="@+id/tvEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="304dp"
            android:drawablePadding="10dp"
            android:text="@string/edit_profile"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow"
            app:drawableStartCompat="@drawable/ic_profile"
            app:layout_constraintBottom_toTopOf="@+id/tvAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:text="@string/address"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow"
            app:drawableStartCompat="@drawable/ic_address"
            app:layout_constraintBottom_toTopOf="@+id/tvNotification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEditProfile" />

        <TextView
            android:id="@+id/tvNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:text="@string/notification"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow"
            app:drawableStartCompat="@drawable/ic_notification"
            app:layout_constraintBottom_toTopOf="@+id/tvPayment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

        <TextView
            android:id="@+id/tvPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:text="@string/payment"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow"
            app:drawableStartCompat="@drawable/ic_wallet"
            app:layout_constraintBottom_toTopOf="@+id/tvSecurity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNotification" />

        <TextView
            android:id="@+id/tvSecurity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:text="@string/security"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow"
            app:drawableStartCompat="@drawable/ic_security"
            app:layout_constraintBottom_toTopOf="@+id/tvLanguage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.344"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPayment" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:text="@string/language"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow"
            app:drawableStartCompat="@drawable/ic_language"
            app:layout_constraintBottom_toTopOf="@+id/switchDarkMode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSecurity" />


        <TextView
            android:id="@+id/tvSelectedLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:drawablePadding="10dp"
            android:text="English (US)"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSecurity" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDarkMode"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_darkmode"
            android:drawablePadding="10dp"
            android:text="@string/dark_mode"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvPrivacy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLanguage" />

        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:text="@string/privacy_policy"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow"
            app:drawableStartCompat="@drawable/ic_privacy"
            app:layout_constraintBottom_toTopOf="@+id/tvHelp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchDarkMode" />

        <TextView
            android:id="@+id/tvHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:text="@string/help_center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow"
            app:drawableStartCompat="@drawable/ic_infobox"
            app:layout_constraintBottom_toTopOf="@+id/tvMultiple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.172"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrivacy" />

        <TextView
            android:id="@+id/tvMultiple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:text="@string/invite_friends"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_arrow"
            app:drawableStartCompat="@drawable/ic_multiple_user"
            app:layout_constraintBottom_toTopOf="@+id/tvLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHelp" />

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="15dp"
            android:drawablePadding="10dp"
            android:text="@string/logout"
            android:textColor="@color/Red"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_logout"
            app:drawableTint="@color/Red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMultiple" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
